--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,12 @@
-{% extends 'layout.html' %}
+{% extends "layout.html" %}
 
 {% block content %}
     {% from 'macros.html' import render_field %}
-    <form method='POST' action=''>
-        {{ form.csrf_token }}
+    <form method='POST' action="">
+        {{form.csrf_token}}
         {% for field in form %}
             {{ render_field(field) }}
         {% endfor %}
-        <button type="submit" id="submit">Register!</button>
+        <button type="submit" id="submit">Login</button>
     </form>
 {% endblock %}
