--- a/project/templates/new.html
+++ b/project/templates/new.html
@@ -4,20 +4,14 @@
         <section>
             <div class="container">
                 <div class="new-entry">
-                    <h2>New Entry</h2>
-                    <form>
-                        <label for="title"> Title</label>
-                        <input id="title" type="text" name="title"><br>
-                        <label for="date">Date</label>
-                        <input id="date" type="date" name="date"><br>
-                        <label for="time-spent"> Time Spent</label>
-                        <input id="time-spent" type="text" name="timeSpent"><br>
-                        <label for="what-i-learned">What I Learned</label>
-                        <textarea id="what-i-learned" rows="5" name="whatILearned"></textarea>
-                        <label for="resources-to-remember">Resources to Remember</label>
-                        <textarea id="resources-to-remember" rows="5" name="ResourcesToRemember"></textarea>
-                        <input type="submit" value="Publish Entry" class="button">
-                        <a href="#" class="button button-secondary">Cancel</a>
+                    <h2>Add a New Journal Entry!</h2>
+                    {% from 'macros.html' import render_field %}
+                    <form method='POST' action=''>
+                        {{ form.csrf_token }}
+                        {% for field in form %}
+                            {{ render_field(field) }}
+                        {% endfor %}
+                        <button type="submit" id="submit">Record Entry!</button>
                     </form>
                 </div>
             </div>
