--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -9,7 +9,7 @@
                 <div class="entry-list">
                 {% if entries %}
                     {% for entry in entries %}
-                        <a href="#">{{entry.title}}</br></a>
+                        <a href="{{url_for('details', entry_title = entry.title)}}">{{entry.title}}</br></a>
                     {% endfor %}
                 {% else %}
                     <p>No journal entries yet.</p>
