--- a/project/templates/detail.html
+++ b/project/templates/detail.html
@@ -18,7 +18,10 @@
                 </div>
             </div>
             <div class="edit">
-                <p><a href="edit.html">Edit Entry</a></p>
+                {% for entry in entry %}
+                <p><a href="{{url_for('edit', entry_title = entry.title)}}">Edit Entry</a></p>
+                {% endfor %}
+            }
             </div>
         </section>
 {% endblock %}
