--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,11 +1,16 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>Welcome to Journalist</h1>
     {% if current_user.is_authenticated %}
-        <h4>Welcome {{current_user.username}}! Your Journal is Below.</h4>
-        {% endif %}
+        <h1>Welcome {{current_user.username}}</h1>
+    {% else %}
+        <h1>Welcome Dear Journalist!</h1>
+    {% endif %}
         <section>
             <div class="container">
+            <p>Journalist helps you keep track of what you learn in life.</p>
+            <p>You can track resources, time spent, and more. Login today
+            to get strated.</p>
+            <img src="static/images/journalist.jpg" alt="Journalist">
             </div>
         </section>
 {% endblock %}
