--- a/project/templates/detail.html
+++ b/project/templates/detail.html
@@ -20,8 +20,8 @@
             <div class="edit">
                 {% for entry in entry %}
                 <p><a href="{{url_for('edit', entry_title = entry.title)}}">Edit Entry</a></p>
+                <p><a href="{{url_for('delete', entry_title = entry.title)}}">Delete Entry</a></p>
                 {% endfor %}
-            }
             </div>
         </section>
 {% endblock %}
