--- a/project/templates/edit.html
+++ b/project/templates/edit.html
@@ -3,7 +3,8 @@
         <section>
             <div class="container">
                 <div class="edit-entry">
-                    <h2>Edit Entry</h2>
+                    <h2>Edit Your Journal Entry</h2>
+                    <p>Make your changes & click 'Save Entry'</p>
                     {% from 'macros.html' import render_field %}
                         <form method='POST' action=''>
                             {{ form.csrf_token }}
