--- a/project/static/css/normalize.css
+++ b/project/static/css/normalize.css
@@ -293,6 +293,11 @@ input[type="reset"],
 input[type="submit"] {
   -webkit-appearance: button; /* 2 */
   cursor: pointer; /* 3 */
+  padding: 9px 24px;
+  border-radius: 2px;
+  background-color: #678F89;
+  color: #FFFFFF;
+  margin: 15px 0px;
 }
 
 /**
