--- a/project/templates/edit.html
+++ b/project/templates/edit.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends "entries.html" %}
 {% block content %}
         <section>
             <div class="container">
