--- a/project/templates/delete.html
+++ b/project/templates/delete.html
@@ -1,25 +1,34 @@
-{% extends "entries.html" %}
+{% extends "layout.html" %}
 
 {% block content %}
-    <h2>Before You Delete!</h2>
-        <p>Are you sure you want to delete this entry?  Type the title
-        {{entry.title}} and click 'Delete this entry' to confirm.</p>
-        <h2>{{ entry.title }}</h2>
-        <p>{{ entry.date }}</p>
-        <h2>Time Spent</h2>
-        <p>{{ entry.time }}</p>
-        <h2>What I Learned</h2>
-        <p>{{ entry.entry }}</p>
-        <h2>Resources to Remember</h2>
-        <p>{{ entry.resources }}</p>
-        <h4>Tags</h4>
-        <p>{{ entry.tag }}</p>
-    {% from 'macros.html' import render_field %}
-    <form method='POST' action=''>
-        {{ form.csrf_token }}
-        {% for field in form %}
-            {{ render_field(field) }}
-        {% endfor %}
-        <button type="submit" id="submit">Delete This Entry</button>
-    </form>
+    <section>
+        <h2>Please Confirm</h2>
+        <div>
+            <p>Are you sure you want to delete this entry?</p>
+            <h4 style="color: red;"> Type '{{entry.title}}' Below to Confirm.</h4>
+            <p>You are deleting the following entry from your journal:</p>
+        </div>
+            <div class="delete-box">
+                <h2>{{ entry.title }}</h2>
+                <p>{{ entry.date }}</p>
+                <h3>Time Spent</h3>
+                <p>{{ entry.time }}</p>
+                <h3>What I Learned</h3>
+                <p>{{ entry.entry }}</p>
+                <h3>Resources to Remember</h3>
+                <p>{{ entry.resources }}</p>
+                <h3>Tags</h3>
+                <p>{{ entry.tag }}</p>
+            </div>
+        <div>
+            {% from 'macros.html' import render_field %}
+            <form method='POST' action=''>
+                {{ form.csrf_token }}
+                {% for field in form %}
+                    {{ render_field(field) }}
+                {% endfor %}
+                <button type="submit" id="submit" class="delete">Delete This Entry</button>
+            </form>
+        </div>
+    </section>
 {% endblock%}
