--- a/project/templates/detail.html
+++ b/project/templates/detail.html
@@ -5,14 +5,15 @@
             <div class="entry-list single">
             {%for entry in entry %}
                 <h2>{{ entry.title }}</h2>
+                <h3>Date</h3>
                 <p>{{ entry.date }}</p>
-                <h2>Time Spent</h2>
+                <h3>Time Spent</h3>
                 <p>{{ entry.time }}</p>
-                <h2>What I Learned</h2>
+                <h3>What I Learned</h3>
                 <p>{{ entry.entry }}</p>
-                <h2>Resources to Remember</h2>
+                <h3>Resources to Remember</h3>
                 <p>{{ entry.resources }}</p>
-                <h4>Tags</h4>
+                <h3>Tags</h3>
                 <p>{{ entry.tag }}</p>
             {% endfor %}
             </div>
